# triphosphate

./: .gitignore  Cargo.toml  Justfile  README.md
.github/workflows/: CI.yaml
.reuse/: dep5
examples/: cbor_toy.rs  hello.rs  inspect_post.rs  shitpost.rs
lexgen/: Cargo.toml  build_validator.sh  generate_validator.sh  package-lock.json  package.json  update_lexicons.sh
lexgen/src/: compiller.rs  lexicon.rs  main.rs  writer.rs
lexgen/src/compiller/: conv.rs  field.rs
lexgen/validator/: index.ts
lexgen/validator/lexicon/: lexicons.ts
lexgen/validator/polyfill/: crypto_noop.js  text_encoder.js
src/: client.rs  lib.rs  parsing.rs  vocab.rs
src/lex/: app.rs  com.rs  mod.rs
src/lex/app/: bsky.rs
src/lex/app/bsky/: actor.rs  embed.rs  feed.rs  graph.rs  notification.rs  richtext.rs
src/lex/app/bsky/actor/: defs.rs  get_preferences.rs  get_profile.rs
src/lex/app/bsky/embed/: external.rs  images.rs  record.rs  record_with_media.rs
src/lex/app/bsky/feed/: defs.rs  post.rs
src/lex/app/bsky/graph/: defs.rs
src/lex/app/bsky/notification/: get_unread_count.rs
src/lex/app/bsky/richtext/: facet.rs
src/lex/com/: atproto.rs
src/lex/com/atproto/: identity.rs  moderation.rs  repo.rs  server.rs  sync.rs
src/lex/com/atproto/identity/: resolve_handle.rs
src/lex/com/atproto/label/: defs.rs
src/lex/com/atproto/moderation/: create_report.rs  defs.rs
src/lex/com/atproto/repo/: create_record.rs  get_record.rs  put_record.rs
src/lex/com/atproto/server/: create_session.rs  get_account_invite_codes.rs
src/lex/com/atproto/sync/: get_commit_path.rs  get_head.rs  subscribe_repos.rs
src/parsing/: at_uri.rs  regexes.rs
src/vocab/: at_identifer.rs  at_uri.rs  cid.rs  datetime.rs  did.rs  handle.rs  nsid.rs
tests/: validation.rs
tests/it/: main.rs  query.rs  record.rs  validation.rs
tests/it/validation/: bridge.rs  feed_def.rs  post.rs  subscribe_repo.rs
triphosphate-vocab/: Cargo.toml
triphosphate-vocab/src/: any.rs  at_identifer.rs  at_uri.rs  bytes.rs  cid.rs  cid_link.rs  datetime.rs  did.rs  handle.rs  language.rs  lib.rs  nsid.rs  parsing.rs  tests.rs  unknown.rs
triphosphate-vocab/src/any/: de.rs  decode.rs  encode.rs  ser.rs  tests.rs
triphosphate-vocab/src/bytes/: base64.rs
triphosphate-vocab/src/parsing/: at_uri.rs
triphosphate-vocab/src/unknown/: de.rs  decode.rs  encode.rs  ser.rs  tests.rs
