[package]
name = "triphosphate"
version = "0.0.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/aDotInTheVoid/triphosphate"
description = "WIP ATProto SKD"

[workspace]
members = [
    "lexgen",
    "triphosphate-vocab",
]

[dependencies]
anyhow = "1.0.75"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["rt", "macros"] }
triphosphate-vocab = { version = "0.1.0", path = "triphosphate-vocab" }

[dev-dependencies]
anyhow = "1.0.75"
chrono = "0.4.26"
cid = "0.10.1"
rquickjs = "0.3.1"
