[package]
name = "triphosphate"
version = "0.0.0"
edition = "2021"
license = "MPL-2.0 and MIT"
repository = "https://github.com/aDotInTheVoid/triphosphate"
description = "WIP ATProto SKD"

[workspace]
members = [
    "lexgen",
    "triphosphate-vocab",
]

[dependencies]
anyhow = "1.0.75"
libipld = { version = "0.16.0", default-features = false, features = ["dag-cbor", "derive"] }
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["rt", "macros"] }
triphosphate-vocab = { version = "0.0.0", path = "triphosphate-vocab" }

[dev-dependencies]
anyhow = "1.0.75"
base64 = "0.21.3"
chrono = "0.4.26"
cid = "0.10.1"
debug3 = { git = "https://github.com/aDotInTheVoid/debug3", rev = "ea4f30a", features = ["libipld-core"] }
rquickjs = "0.3.1"
