[package]
name = "lexgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.1.6"
fs-err = "2.9.0"
heck = "0.4.1"
prettyplease = "0.2.12"
proc-macro2 = { version = "1.0.66", default-features = false }
quote = { version = "1.0.32", default-features = false }
serde = { version = "=1.0.171", features = ["derive"] }
serde_json = "1.0.103"
syn = { version = "2.0.28", features = ["parsing"] }
triphosphate-vocab = { version = "0.1.0", path = "../triphosphate-vocab" }
