[package]
name = "triphosphate-vocab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.28" }
cid = "0.10.1"
oxilangtag = "0.1.3"
regex = "1.9.3"
serde = { version = "1.0.188", features = ["derive"] } # TODO: Remove derive
serde_json = "1.0.105"
winnow = "0.5.10"
