[package]
name = "triphosphate-vocab"
version = "0.0.0"
edition = "2021"
license = "MPL-2.0 AND (Apache-2.0 OR MIT)"
repository = "https://github.com/aDotInTheVoid/triphosphate"
description = "ATProto Core Types, for the Triphosphate SDK"

[dependencies]
base64 = "0.21.3"
chrono = { version = "0.4.28" }
cid = "0.10.1"
libipld = { version = "0.16.0", default-features = false, features = ["dag-cbor", "derive"] }
oxilangtag = "0.1.3"
regex = "1.9.3"
serde = { version = "1.0.188", features = ["derive"] } # TODO: Remove derive
serde_json = "1.0.105"
winnow = "0.5.10"
